Make script into a module
This means you have to use "Live Server" or some other hosting method for
the files, since ES modules don't support anything but HTTPS.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/DB.js"></script>
+    <script type="module" src="./js/DB.js"></script>
 </body>
 </html>
