return all users or plants

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script type="module" src="./js/server.js"></script>
     <script type="module" src="./js/DB.js"></script>
 </body>
 </html>
