--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <script type="module" src="./js/server.js"></script>
     <script type="module" src="./js/DB.js"></script>
+    <script type="module" src="./js/app.js"></script>
 </body>
 </html>
