--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="home-temp">
+        <nav>
+            <div id="hi-user">
+                <h1 id="username">
+                    Hi X
+                </h1>
+            </div>
+            <div id="home-nav">
+                <h1>
+                    Home
+                </h1>
+            </div>
+            <div id="profile-nav">
+               <h1> 
+                My Profile
+                </h1>
+            </div>
+            <div id="logo-nav">
+                <img src="./media/cactus-svgrepo-com.svg">
+             </div>
+        </nav>
+        <div id="home-body">
+            <div id="item-container">
+
+            </div>
+        </div>
+    </div>
+    
     <script type="module" src="./js/server.js"></script>
     <script type="module" src="./js/DB.js"></script>
     <script type="module" src="./js/app.js"></script>
