--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
     <script type="module" src="./js/server.js"></script>
     <script type="module" src="./js/DB.js"></script>
     <script type="module" src="./js/app.js"></script>
+
+    <div id="log-in">
+        <form>
+            <label for="username">username</label>
+            <input id="username" name="username" type="text">
+            <label for="password">password</label>
+            <input id="password" name="password" type="password">
+            <button id="submit-login-btn">log in</button>
+        </form>
+    </div>
 </body>
 </html>
