--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div id="home-temp">
         <nav>
@@ -23,13 +25,13 @@
                 </h1>
             </div>
             <div id="profile-nav">
-               <h1> 
-                My Profile
+                <h1>
+                    My Profile
                 </h1>
             </div>
             <div id="logo-nav">
                 <img src="./media/cactus-svgrepo-com.svg">
-             </div>
+            </div>
         </nav>
         <div id="home-body">
             <div id="item-container">
@@ -37,19 +39,26 @@
             </div>
         </div>
     </div>
+
+    <template id="login-temp">
+        <class="login" id="login-container">
+            <img id="logo-login" src="./media/cactus-svgrepo-com.svg" alt="logo">
+            <h1>log in</h1>
+            <form>
+                <label for="username">username</label>
+                <input id="username" name="username" type="text" placeholder="username...">
+                <label for="username">password</label>
+                <input id="password" name="password" type="password" placeholder="password...">
+                <p id="login-message"></p>
+            </form>
+            <button id="login-btn">log in</button>
+            </div>
+    </template>
     
     <script type="module" src="./js/server.js"></script>
     <script type="module" src="./js/DB.js"></script>
     <script type="module" src="./js/app.js"></script>
 
-    <div id="log-in">
-        <form>
-            <label for="username">username</label>
-            <input id="username" name="username" type="text">
-            <label for="password">password</label>
-            <input id="password" name="password" type="password">
-            <button id="submit-login-btn">log in</button>
-        </form>
-    </div>
 </body>
+
 </html>
