--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
             <div id="item-container">
 
             </div>
+            <div id="home-footer">
+                <button id="currentPage"> 1 </button>
+                <button id="nextPage"> next </button>
+            </div>
         </div>
+      
     </div>
 
     <template id="login-temp">
