--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
 </head>
 
 <body>
-    <div id="home-temp">
+
+    <template id="login-temp">
+        <div class="login" id="login-container">
+            <img id="logo-login" src="./media/cactus-svgrepo-com.svg" alt="logo">
+            <h1>log in</h1>
+            <form>
+                <label for="username">username</label>
+                <input id="username" name="username" type="text" placeholder="username...">
+                <label for="username">password</label>
+                <input id="password" name="password" type="password" placeholder="password...">
+                <p id="login-message"></p>
+            </form>
+            <button id="login-btn">log in</button>
+            </div>
+    </template>
+
+    <template id="home-temp">     
+        <div id="home-temp">
         <nav>
             <div id="hi-user">
                 <h1 id="username">
@@ -44,22 +61,66 @@
         </div>
       
     </div>
-
-    <template id="login-temp">
-        <class="login" id="login-container">
-            <img id="logo-login" src="./media/cactus-svgrepo-com.svg" alt="logo">
-            <h1>log in</h1>
-            <form>
-                <label for="username">username</label>
-                <input id="username" name="username" type="text" placeholder="username...">
-                <label for="username">password</label>
-                <input id="password" name="password" type="password" placeholder="password...">
-                <p id="login-message"></p>
-            </form>
-            <button id="login-btn">log in</button>
-            </div>
     </template>
+
+    <template id="plant-temp">
+        <div class="plant">
+            <div class="plant-img">
+                <img src="" alt="">
+            </div>
+            <h3>
+                Plant Name
+            </h3>
+            <button>
+                Buy
+            </button>
+        </div>
+    </template>
+
+    <template id="profile-plant-temp">
+        <div class="plant">
+            <div class="plant-img">
+                <img src="" alt="">
+            </div>
+            <h3>
+                Plant Name
+            </h3>
+        </div>
+    </template>
+
+    <template id="my-profile-temp">
+        <div id="my-profile">
+            <nav>
+                <div id="hi-user">
+                    <h1 id="username">
+                        Hi X
+                    </h1>
+                </div>
+                <div id="home-nav">
+                    <h1>
+                        Home
+                    </h1>
+                </div>
+                <div id="profile-nav">
+                    <h1>
+                        My Profile
+                    </h1>
+                </div>
+                <div id="logo-nav">
+                    <img src="./media/cactus-svgrepo-com.svg">
+                </div>
+            </nav>
+            <h1 id="profile-header">
+                X's Plants
+            </h1>
+            <div id="profile-body">
+                <div id="item-container">
     
+                </div>
+            </div>
+        </div>
+    </template>
+
     <script type="module" src="./js/server.js"></script>
     <script type="module" src="./js/DB.js"></script>
     <script type="module" src="./js/app.js"></script>
