--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             </div>
             <div id="home-footer">
-                <button id="currentPage"> 1 </button>
+                <button id="previousPage"> previous </button>
                 <button id="nextPage"> next </button>
             </div>
         </div>
