--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <form>
                 <label for="username">username</label>
                 <input id="username" name="username" type="text" placeholder="username...">
-                <label for="username">password</label>
+                <label for="password">password</label>
                 <input id="password" name="password" type="password" placeholder="password...">
                 <p id="login-message"></p>
             </form>
@@ -34,6 +34,11 @@
             <div id="hi-user">
                 <h1 id="username">
                     Hi X
+                </h1>
+            </div>
+            <div id="logout-nav">
+                <h1>
+                    Logout
                 </h1>
             </div>
             <div id="home-nav">
@@ -50,13 +55,16 @@
                 <img src="./media/cactus-svgrepo-com.svg">
             </div>
         </nav>
+        <h1 class="page-title">
+            Oriyal Flowers
+        </h1>
         <div id="home-body">
             <div id="item-container">
 
             </div>
             <div id="home-footer">
-                <button id="previousPage"> previous </button>
-                <button id="nextPage"> next </button>
+                <button id="previousPage"> Previous </button>
+                <button id="nextPage"> Next </button>
             </div>
         </div>
       
@@ -96,6 +104,11 @@
                         Hi X
                     </h1>
                 </div>
+                <div id="logout-nav">
+                    <h1>
+                        Logout
+                    </h1>
+                </div>
                 <div id="home-nav">
                     <h1>
                         Home
@@ -110,7 +123,7 @@
                     <img src="./media/cactus-svgrepo-com.svg">
                 </div>
             </nav>
-            <h1 id="profile-header">
+            <h1 class="page-title" id="profile-header">
                 X's Plants
             </h1>
             <div id="profile-body">
