--- a/index.html
+++ b/index.html
@@ -25,42 +25,48 @@
                 <p id="login-message"></p>
             </form>
             <button id="login-btn">log in</button>
-            </div>
+        </div>
     </template>
 
-    <template id="home-temp">     
+    <template id="home-temp">
         <div id="home-temp">
-        <nav>
-            <div id="hi-user">
-                <h1 id="username">
-                    Hi X
-                </h1>
-            </div>
-            <div id="home-nav">
-                <h1>
-                    Home
-                </h1>
-            </div>
-            <div id="profile-nav">
-                <h1>
-                    My Profile
-                </h1>
-            </div>
-            <div id="logo-nav">
-                <img src="./media/cactus-svgrepo-com.svg">
-            </div>
-        </nav>
-        <div id="home-body">
-            <div id="item-container">
+            <nav>
+                <div id="hi-user">
+                    <h1 id="username">
+                        Hi
+                    </h1>
+                </div>
+                <div id="home-nav">
+                    <h1>
+                        Home
+                    </h1>
+                </div>
+                <div id="profile-nav">
+                    <h1>
+                        My Profile
+                    </h1>
+                </div>
+                <div id="logo-nav">
+                    <img src="./media/cactus-svgrepo-com.svg">
+                </div>
+            </nav>
+            <div id="home-body">
+                <div id="search-container">
+                    <input type="search" id="search" name="search" placeholder="plant name...">
+                    <button id="search-btn">
+                        <img id="search-img" src="./media/search.png">
+                    </button>
+                </div>
+                <div id="item-container">
 
+                </div>
+                <div id="home-footer">
+                    <button id="previousPage"> previous </button>
+                    <button id="nextPage"> next </button>
+                </div>
             </div>
-            <div id="home-footer">
-                <button id="previousPage"> previous </button>
-                <button id="nextPage"> next </button>
-            </div>
+
         </div>
-      
-    </div>
     </template>
 
     <template id="plant-temp">
@@ -93,7 +99,7 @@
             <nav>
                 <div id="hi-user">
                     <h1 id="username">
-                        Hi X
+                        Hi
                     </h1>
                 </div>
                 <div id="home-nav">
@@ -111,11 +117,11 @@
                 </div>
             </nav>
             <h1 id="profile-header">
-                X's Plants
+
             </h1>
             <div id="profile-body">
                 <div id="item-container">
-    
+
                 </div>
             </div>
         </div>
