--- a/index.html
+++ b/index.html
@@ -30,45 +30,52 @@
 
     <template id="home-temp">
         <div id="home-temp">
-        <nav>
-            <div id="hi-user">
-                <h1 id="username">
-                    Hi 
-                </h1>
-            </div>
-            <div id="logout-nav">
-                <h1>
-                    Logout
-                </h1>
-            </div>
-            <div id="home-nav">
-                <h1>
-                    Home
-                </h1>
-            </div>
-            <div id="profile-nav">
-                <h1>
-                    My Profile
-                </h1>
-            </div>
-            <div id="logo-nav">
-                <img src="./media/cactus-svgrepo-com.svg">
-            </div>
-        </nav>
-        <h1 class="page-title">
-            Oriyal Flowers
-        </h1>
-        <div id="home-body">
-            <div id="item-container">
-
+            <nav>
+                <div id="hi-user">
+                    <h1 id="username">
+                        Hi
+                    </h1>
                 </div>
-                <div id="home-footer">
-                    <button id="previousPage"> Previous </button>
-                    <button id="nextPage"> Next </button>
+                <div id="logout-nav">
+                    <h1>
+                        Logout
+                    </h1>
                 </div>
-            </div>
+                <div id="home-nav">
+                    <h1>
+                        Home
+                    </h1>
+                </div>
+                <div id="profile-nav">
+                    <h1>
+                        My Profile
+                    </h1>
+                </div>
+                <div id="logo-nav">
+                    <img src="./media/cactus-svgrepo-com.svg">
+                </div>
+            </nav>
+            <h1 class="page-title">
+                Oriyal Flowers
+            </h1>
+            <div id="home-body">
+                <div id="home-body">
+                    <div id="search-container">
+                        <input type="search" id="search" name="search" placeholder="plant name...">
+                        <button id="search-btn">
+                            <img id="search-img" src="./media/search.png">
+                        </button>
+                    </div>
+                    <div id="item-container">
 
-        </div>
+                    </div>
+                    <div id="home-footer">
+                        <button id="previousPage"> Previous </button>
+                        <button id="nextPage"> Next </button>
+                    </div>
+                </div>
+
+            </div>
     </template>
 
     <template id="plant-temp">
@@ -102,11 +109,6 @@
                 <div id="hi-user">
                     <h1 id="username">
                         Hi
-                    </h1>
-                </div>
-                <div id="logout-nav">
-                    <h1>
-                        Logout
                     </h1>
                 </div>
                 <div id="logout-nav">
