my profile flower counter

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
             <h3>
                 Plant Name
             </h3>
+            <div id="plant-count">
+
+            </div>
+            <button>
+                Remove
+            </button>
         </div>
     </template>
 
