--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <template id="home-temp">
         <div id="home-temp">
+        <div id="confirmMsg">confirmed purchase</div>
             <nav>
                 <div id="hi-user">
                     <h1 id="username">
