working vertion Or

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 Oriyal Flowers
             </h1>
             <div id="search-container">
-                <input type="search" id="search" name="search" placeholder="plant name...">
+                <input type="search" id="search" name="search" placeholder="plant name... | color: ...">
                 <button id="search-btn">
                     <img id="search-img" src="./media/search.png">
                 </button>
