nttwork redesign + bug fixes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                     </div>
                     <div id="home-footer">
-                        <button id="previousPage"> Previous </button>
+                        <button id="previousPage" disabled> Previous </button>
                         <div id="page-num">
                             <p id="PnumTag">1</p>
                         </div>
