--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <img src="./media/cactus-svgrepo-com.svg">
                 </div>
             </nav>
-            <h1 class="page-title">
+            <h1 id="page-title" class="page-title">
                 Oriyal Flowers
             </h1>
             <div id="search-container">
